# phy-ray

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  LICENSE  README.md  structure.txt
phyray_app/: CMakeLists.txt
phyray_app/include/: phyraywindow.h
phyray_app/src/: main.cpp  phyraywindow.cpp  phyraywindow.h  phyraywindow.ui
phyray_lib/: CMakeLists.txt
phyray_lib/include/core/: concurrency.h  configparser.h  debug.h  film.h  fperror.h  imageio.h  lowdiscrepancy.h  phyr.h  phyr_api.h  phyr_math.h  phyr_mem.h  phyr_reporter.h  rng.h  scene.h
phyray_lib/include/core/accel/: bvh.h
phyray_lib/include/core/camera/: camera.h
phyray_lib/include/core/color/: spectrum.h
phyray_lib/include/core/geometry/: geometry.h  interaction.h  shape.h  transform.h
phyray_lib/include/core/integrator/: filter.h  integrator.h  lightdistrib.h  sampler.h  sampling.h
phyray_lib/include/core/light/: light.h
phyray_lib/include/core/material/: material.h  microfacet.h  reflectance.h  texture.h
phyray_lib/include/core/object/: object.h
phyray_lib/include/modules/cameras/: perspective.h
phyray_lib/include/modules/filters/: box.h  gaussian.h  lanczos.h  mitchell.h  triangle.h
phyray_lib/include/modules/integrators/: path.h
phyray_lib/include/modules/lights/: diffuse.h  distant.h  point.h
phyray_lib/include/modules/materials/: glass.h  matte.h  metal.h  mirror.h  plastic.h
phyray_lib/include/modules/samplers/: stratified.h
phyray_lib/include/modules/shapes/: disk.h  sphere.h
phyray_lib/include/modules/textures/: consttex.h  mix.h  scaled.h
phyray_lib/src/core/: concurrency.cpp  configparser.cpp  debug.cpp  film.cpp  imageio.cpp  lowdiscrepancy.cpp  phyr.cpp  phyr_math.cpp  phyr_mem.cpp  phyr_reporter.cpp  scene.cpp
phyray_lib/src/core/accel/: bvh.cpp
phyray_lib/src/core/color/: spectrum.cpp
phyray_lib/src/core/geometry/: geometry.cpp  interaction.cpp  shape.cpp  transform.cpp
phyray_lib/src/core/integrator/: filter.cpp  integrator.cpp  lightdistrib.cpp  sampler.cpp  sampling.cpp
phyray_lib/src/core/light/: light.cpp
phyray_lib/src/core/material/: material.cpp  microfacet.cpp  reflectance.cpp  texture.cpp
phyray_lib/src/core/object/: object.cpp
phyray_lib/src/modules/cameras/: perspective.cpp
phyray_lib/src/modules/filters/: box.cpp  gaussian.cpp  lanczos.cpp  mitchell.cpp  triangle.cpp
phyray_lib/src/modules/integrators/: path.cpp
phyray_lib/src/modules/lights/: diffuse.cpp  distant.cpp  point.cpp
phyray_lib/src/modules/materials/: glass.cpp  matte.cpp  metal.cpp  mirror.cpp  plastic.cpp
phyray_lib/src/modules/samplers/: stratified.cpp
phyray_lib/src/modules/shapes/: disk.cpp  sphere.cpp
phyray_lib/test/: test_consttex.cpp  test_fpe.cpp  test_isec.cpp  test_math.cpp  test_mem.cpp  test_point.cpp  test_vec.cpp  testlib.cpp
